--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '1.2-SNAPSHOT'
+	id 'fabric-loom' version '1.3-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -11,19 +11,20 @@ base {
 }
 
 repositories {
+	maven {
+		name = "AzureLib"
+		url = "https://dl.cloudsmith.io/public/azuredoom-mods/azurelib/maven/"
+	}
+
+	maven {
+		name = "Modmenu"
+		url = "https://maven.terraformersmc.com/releases"
+	}
 }
 
 loom {
 	accessWidenerPath = file("src/main/resources/nyctoplus.accesswidener")
 
-    splitEnvironmentSourceSets()
-
-	mods {
-		"nyctoplus" {
-			sourceSet sourceSets.main
-			sourceSet sourceSets.client
-		}
-	}
     runs {
 		datagen {
 			inherit server
@@ -52,6 +53,9 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+	modImplementation "mod.azure.azurelib:azurelib-fabric-${project.minecraft_version}:${project.azure_version}"
+	modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
 
 }
 
