--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20
-yarn_mappings=1.20+build.1
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.9
 loader_version=0.14.21
 
 # Mod Properties
@@ -14,4 +14,6 @@ maven_group=dev.sterner
 archives_base_name=nyctoplus
 
 # Dependencies
-fabric_version=0.83.0+1.20
+fabric_version=0.85.0+1.20.1
+azure_version=1.0.18
+modmenu_version=7.0.0-beta.2
